--- a/app/views/admin/users/_other_posts.html.erb
+++ b/app/views/admin/users/_other_posts.html.erb
@@ -1,12 +1,21 @@
-<h3>Other user's posts</h3>
+<span class="user-posts-title">Other user's posts</span>
 
     <% User.all.each do |user| %>
         <% if user.id != current_user.id %>
-            <h2><%= user.name %></h2>
+        <span class="other-posts-user-name"><%= user.name %></span>
                 <% user.posts.each do |post| %>
-                    <% clean_post_title = sanitize post.title, tags: %w(strong em a div img) %>
-                    <ol class="others-posts"><%= link_to clean_post_title,  admin_post_path(post) %>, <%= link_to "  |  delete this post", admin_post_path(post),
-                    method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %></ol>
+                <% clean_post_title = sanitize post.title, tags: %w(strong em a div img) %>
+                <div class="other-post-container">
+                   <div class="others-post-link"><%= link_to clean_post_title,  admin_post_path(post) %></div>
+                                          
+                    <div class="modify-post-links">
+ 
+                        <%= link_to " delete this post", admin_post_path(post),
+                        method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %>
+                    </div>
+                </div>
                 <% end %>
+              
         <% end %>
+
     <% end %>
