--- a/app/views/admin/users/_profile_info.html.erb
+++ b/app/views/admin/users/_profile_info.html.erb
@@ -1,12 +1,8 @@
 
 
-<span class="userName"><h2>
-    <%= @user.name %>
+<div class="user-name-container">
+    <div class="user-name-text"><%= @user.name %></div>
     <% if current_user.id == @user.id %>
         <%= link_to "Edit my profile data", edit_admin_user_path(current_user), method: "get", class:"profile-edit" %>
     <% end %>
-    </h2></span><br>
-    
-<span class="userEmail"><%= @user.email %></span><br>
-<span class="creationDate"><%= "created at: #{@user.created_at}"%></span><br>
-<span class="updateDate"><%= "updated at #{@user.updated_at}" %></span><br>
+</div>
