more mobile admin layout

--- a/app/views/admin/users/_other_posts.html.erb
+++ b/app/views/admin/users/_other_posts.html.erb
@@ -3,19 +3,21 @@
     <% User.all.each do |user| %>
         <% if user.id != current_user.id %>
         <span class="other-posts-user-name"><%= user.name %></span>
-                <% user.posts.each do |post| %>
+            <div class="other-posts-container">
+                <% user.posts.by_date_desc.each do |post| %>
                 <% clean_post_title = sanitize post.title, tags: %w(strong em a div img) %>
-                <div class="other-post-container">
-                   <div class="others-post-link"><%= link_to clean_post_title,  admin_post_path(post) %></div>
+
+   
+                    <div class="others-post-link">
+                        <%= link_to clean_post_title,  admin_post_path(post) %>        
+                    </div>
                                           
                     <div class="modify-post-links">
- 
-                        <%= link_to " delete this post", admin_post_path(post),
+                        <%= link_to "Delete this post", admin_post_path(post),
                         method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %>
                     </div>
-                </div>
                 <% end %>
-              
+            </div>
         <% end %>
 
     <% end %>
