--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -5,8 +5,8 @@
 
     body {
         font-family: $font-stack;
-        color: $site-grey-light;
-        background-color: $background-light-white;
+        color: rgb(41, 57, 82);
+        background-color: rgb(230,230,230);
         margin:auto;
         display:flex;
         justify-content: center;
@@ -18,25 +18,43 @@
   @media screen and (max-width: 480px) {
 
     .profile-main {
-        width: 95%;
+        width: 100%;
         margin:auto;
         display:flex;
         flex-direction: column;
         justify-content: center;
     }
 
+    .profile-main a {
+    	text-decoration: none;
+    }
+
+    .profile-main hr {
+    	width: 100%;
+    	color: rgb(41, 57, 82);
+    	height: 2px;
+    }
+
+
     .nav-menu {
         position: relative;
         width: 100%;
         height: 50px;
+        margin: 0;
         display: flex;
         justify-content: flex-start;
-        padding: 5px;
+        background-color: rgb(41, 57, 82);
+   
     }
 
     .nav-menu > a {
     	padding-left: 5px;
     	padding-right: 5px;
+    	margin: 0;
+    	border: 1px solid white;
+    	text-decoration: none;
+    	width: 25%;
+    	color: white;
     }
     
     .user-name-container {
@@ -67,7 +85,7 @@
     	margin: auto;
     	display: flex;
     	flex-direction: column;
-    	margin: 20px auto;
+    	margin: auto;
     }
 
     .user-posts-title {
@@ -80,6 +98,7 @@
     	width: auto;
     	display:flex;
     	justify-content: center;
+    	margin: 10px auto 10px auto;
 
     }
 
@@ -87,7 +106,7 @@
     	display:flex;
     	width:auto;
     	justify-content: center;
-    	margin: auto;
+    	margin: auto auto 10px auto;
     }
 
     .other-posts-user-name {
@@ -96,13 +115,21 @@
     	font-size: 100%;
     }
 
+    .other-posts-container {
+   		width: 100%;
+    	margin: auto;
+    	display: flex;
+    	flex-direction: column;
+    	margin: auto;
+    }
+
     .others-post-link {
 
     	width: auto;
     	display:flex;
     	justify-content: center;
+    	margin: 10px auto 10px auto;
     }
-
 
 
 
