--- a/app/views/admin/users/_own_posts.html.erb
+++ b/app/views/admin/users/_own_posts.html.erb
@@ -1,19 +1,15 @@
 
     <span class="user-posts-title"><%= @user.name %>'s posts</span>
-    
-        <% @posts.each do |post| %>
-        
+    <div class="own-posts-container">
+        <% @posts.by_date_desc.each do |post| %>
             <% clean_post_title = sanitize post.title, tags: %w(strong em a div img) %>
-            <div class="own-posts-container">
                 <div class="own-post-link"><%= link_to clean_post_title,  admin_post_path(post) %></div>
                 <% if current_user.id == @user.id %>
                 <div class="modify-post-links">
                     <%= link_to "Edit this post  |", edit_admin_post_path(post), class: "post-edit" %>
                     <%= link_to "  |  Delete this post", admin_post_path(post),
-                    method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"} %>
-                </div>
+                    method: 'delete', class: "post-delete", data: {confirm: "Are you sure? This action cannot be undone"}%>
                 <% end %>
-
-            </div>
-            
+                </div>
         <% end %>
+    </div>
