--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -1,8 +1,8 @@
 
-<%# if !@post then @post = Post.find_by(slug: params[:slug]) %>
-<%# else @post = @post %>
-<%# end %>
-<% @post = Post.find_by(slug: params[:slug])%>
+<% if !@post then @post = Post.find_by(slug: params[:slug]) %>
+<% else @post = @post %>
+<% end %>
+
 <div class="post" id="post-<%= @post.slug %>">
     
     <div class="post-title"><%= sanitize @post.title, tags: %w(strong em a div p img span style), attributes: %w(style font-style text-decoration color src font-family font-weight height width) %></div>
