--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,5 +1,3 @@
-    $site-grey-light: #333;
-    $site-grey-dark: #111;
     $font-stack: Calibri, Helvetica, Sans-serif;
     $background-light-white: rgb(230,230,230);
     $dark-blue: rgb(41, 57, 82);
@@ -119,11 +117,16 @@
     	margin: auto auto 10px auto;
     }
 
-    .other-posts-user-name {
-    	margin-left:auto;
-	    margin-right:auto;
-    	font-size: 100%;
+    .others-posts-dashboard {
+    	display:flex;
+    	flex-direction: column;
     }
+
+	.other-posts-user-name {
+	    display:flex;
+	    justify-content: center;
+	    margin: 5px auto 5px auto;
+	}
 
     .other-posts-container {
    		width: 100%;
