--- a/app/views/admin/users/_menu.html.erb
+++ b/app/views/admin/users/_menu.html.erb
@@ -1,10 +1,10 @@
 <div class="nav-menu">
     <% if @user.id == current_user.id %>
-        <%= link_to "Create new post", new_admin_post_path, method: "get", class: "new-post-btn" %>
+        <%= link_to "Create new post", new_admin_post_path, method: "get", class: "new-post-link" %>
     <% end %>
     <% if logged_in? && current_user.admin && @user.id == current_user.id %>
-        <%= link_to "Create new user", new_admin_user_path, method: "get", class: "new-user-btn" %>
-        <%= link_to "See all users", admin_users_path, method: "get", class: "all-users-btn" %>
+        <%= link_to "Create new user", new_admin_user_path, method: "get", class: "new-user-link" %>
+        <%= link_to "See all users", admin_users_path, method: "get", class: "all-users-link" %>
     <% end %>
-        <%= link_to "Log out", admin_logout_path, method: "delete", class: "logout-btn" %>
+        <%= link_to "Log out", admin_logout_path, method: "delete", class: "logout-link" %>
 </div>
