--- a/app/views/admin/users/_user_data_form.html.erb
+++ b/app/views/admin/users/_user_data_form.html.erb
@@ -2,20 +2,20 @@
 
 <%= render 'shared/error_messages' %><br>
 
-<%= form_for(@user, url: @url) do |f| %>
+<%= form_for(@user, url: @url, :html => {:class => "user-data-form"}) do |f| %>
 
-<%= f.label :name %><br>
-<%= f.text_field :name %><br>
+<%= f.label :name %>
+<%= f.text_field :name %>
 
-<%= f.label :email %><br>
-<%= f.email_field :email %><br>
+<%= f.label :email %>
+<%= f.email_field :email %>
 
-<%= f.label :password %><br>
-<%= f.password_field :password %><br>
+<%= f.label :password %>
+<%= f.password_field :password %>
 
-<%= f.label :password_confirmation %><br>
-<%= f.password_field :password_confirmation %><br>
+<%= f.label :password_confirmation %>
+<%= f.password_field :password_confirmation %>
 
-<%= f.submit yield(:submit_text), class: "submit-button" %><br>
+<%= f.submit yield(:submit_text), class: "submit-button" %>
 
 <% end %>
