--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -2,7 +2,7 @@
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= javascript_include_tag 'script-main'%> 
-  <meta name="viewport" content="width=device-width, initial-scale=1., user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>	    
 </head>
 
