--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -22,6 +22,22 @@
     	color: white;
     }
 
+    form {
+
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: auto;
+    }
+
+    form > label {
+      margin:5px auto 5px auto;
+    }
+
+    form > input {
+      margin: 5px;
+    }
+
 
   @media screen and (max-width: 480px) {
 
@@ -165,10 +181,7 @@
       }
 
       .user-data-form {
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: auto;
+
       }
 
       .user-data-form > label {
@@ -200,6 +213,13 @@
   }
 
   @media screen and (min-width: 481px)  {
+
+    .login-container {
+      display:flex;
+      justify-content: center;
+      flex-direction: column;
+
+    }
     .profile-main {
         width: 100%;
         margin:auto;
@@ -313,6 +333,7 @@
         display:flex;
         text-align: justify;
         font-weight: bold;
+        margin:auto;
       }
 
       .action-description {
@@ -322,18 +343,18 @@
       }
 
       .user-data-form {
-        display:flex;
+       /* display:flex;
         flex-direction: column;
         justify-content: center;
-        margin: auto;
+        margin: auto;*/
       }
 
       .user-data-form > label {
-        margin:5px auto 5px auto;
+       /* margin:5px auto 5px auto;*/
       }
 
       .user-data-form > input {
-        margin: 5px;
+        /*margin: 5px;*/
       }
     
     .index-container {
