--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,6 +1,6 @@
 <script src="//cdn.ckeditor.com/4.5.10/full/ckeditor.js"></script>
 
-<%= stylesheet_link_tag    'application', media: 'all'%>
+<%= stylesheet_link_tag    'style-main', media: 'all'%>
 <meta name="viewport" content="width=device-width, initial-scale=1., user-scalable=no">
 <link href='https://fonts.googleapis.com/css?family=Stalemate&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <div class="sitewrapper" id="sitewrapper">  
