--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= stylesheet_link_tag    'style-main', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= javascript_include_tag 'script-main'%> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
