Adds password reset, but missing tests

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -13,6 +13,13 @@
 
     }
 
+    .alert {
+      height: auto;
+      background-color: white;
+      border: 1px solid black;
+
+    }
+
     .nav-menu {
         background-color: $dark-blue;
     }
