--- a/app/views/admin/password_resets/new.html.erb
+++ b/app/views/admin/password_resets/new.html.erb
@@ -1,10 +1,17 @@
+
+<% provide(:title, 'Reset Password') %>
 <%= javascript_include_tag 'application'%> 
 <%= stylesheet_link_tag 'admin', media: 'all' %>
 
+
+      
 <% provide(:reset_form_text, "Submit") %>
+
 <div class="password-reset-container">
 <div class="action-title">Reset your password</div>
-
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
 <%= form_for(:admin_password_reset, url: admin_password_resets_path) do |f| %>
 	<%= f.label 'Please enter your email address' %>
 	<%= f.email_field :email %>
