--- a/app/views/admin/password_resets/edit.html.erb
+++ b/app/views/admin/password_resets/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<%= javascript_include_tag 'application'%> 
+<%= stylesheet_link_tag 'admin', media: 'all' %>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%= csrf_meta_tag %>
+
+<% provide(:title, 'Reset password') %>
+
+<div class="user-data-form-container">
+
+
+<%= form_for(@user, url: admin_password_reset_path(params[:id])) do |f| %>
+<%# params[:id] is the reset token %>
+<%= render 'admin/flash_messages' %>
+	<%= hidden_field_tag :email, @user.email %>
+	<%= f.label :password %>
+	<%= f.password_field :password %>
+	<%= f.label :password_confirmation, 'Confirmation' %>
+	<%= f.password_field :password_confirmation %>
+	<%= f.submit 'Update password' %>
+<% end %>
+
+
+
+</div>
