--- a/app/views/site_mailer/password_reset.html.erb
+++ b/app/views/site_mailer/password_reset.html.erb
@@ -1,5 +1,12 @@
-<h1>Site#password_reset</h1>
+<h3><%= @greeting %>  <%= @user.name %>,<h3>
 
-<p>
-  <%= @greeting %>, find me in app/views/site_mailer/password_reset.html.erb
-</p>
+<p>We have received a request to reset your password. In case you requested this, this is the link for you to do so:</p>
+
+<%= link_to "Reset password", edit_admin_password_reset_url(@user.reset_token, email: @user.email) %>
+
+<p>This link will expire in two hours.</p>
+
+<p>If you did not request to reset your password, simply ignore this email and no changes will be made.</p>
+
+<br>
+<p>Regards,</p>
