--- a/app/views/site_mailer/password_reset.text.erb
+++ b/app/views/site_mailer/password_reset.text.erb
@@ -1,3 +1,11 @@
-Site#password_reset
+<%= @greeting %> <%= @user.name %>,
 
-<%= @greeting %>, find me in app/views/site_mailer/password_reset.text.erb
+We have received a request to reset your password. In case you requested this, this is the link for you to do so:
+
+<%= edit_admin_password_reset_url(@user.reset_token, email: @user.email) %>
+
+This link will expire in two hours.
+
+If you did not request to reset your password, simply ignore this email and no changes will be made.
+
+Regards,
