adds password reset + tests

--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -6,6 +6,7 @@
 
 
 <div class="user-data-form-container">
+	<%= render 'admin/flash_messages' %>
 	<span class="action-title">Create new User</span>
 	<span class="action-description">Here you can create new users to contribute</span>
 
