--- a/app/views/admin/password_resets/edit.html.erb
+++ b/app/views/admin/password_resets/edit.html.erb
@@ -4,19 +4,20 @@
 <%= csrf_meta_tag %>
 
 <% provide(:title, 'Reset password') %>
+<%# @user.errors.add(params[:errors]) %>
 
 <div class="user-data-form-container">
-
-
-<%= form_for(@user, url: admin_password_reset_path(params[:id])) do |f| %>
-<%# params[:id] is the reset token %>
 <%= render 'admin/flash_messages' %>
+
+<%= form_for(@user, url: edit_admin_password_reset_url(params[:id], email: @user.email) ) do |f| %>
+<%# params[:id] is the reset token %>
+
 	<%= hidden_field_tag :email, @user.email %>
 	<%= f.label :password %>
 	<%= f.password_field :password %>
 	<%= f.label :password_confirmation, 'Confirmation' %>
 	<%= f.password_field :password_confirmation %>
-	<%= f.submit 'Update password' %>
+	<%= f.submit yield(:title) %>
 <% end %>
 
 
