--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -368,7 +368,7 @@ display: inline;
   
 }
 
-.loremHome {
+.home-main-par {
   text-align:left;
   font-size: 1em;
   width: 61.4%;
@@ -378,7 +378,7 @@ display: inline;
   font-family: Helvetica, Calibri, Arial, Sans-serif;
 }
 
-.img-Gato {
+.home-main-img {
   display: block;
   margin-top: 5px;
   float:right;
@@ -1486,7 +1486,7 @@ overflow: scroll;
 font-size: 2em;  
 }
 
-.loremHome {
+.home-main-par {
 width: 100%;  
 height: 100%;
 font-size: 0.66em;
@@ -1494,7 +1494,7 @@ position: relative;
 display: block;
 }
 
-.img-Gato {
+.home-main-img {
 margin: 3.2em 2px 2px 2px;
 height: 30%;
 width: 30%;
@@ -1986,7 +1986,7 @@ font-size: 2.6em;
 }
 
 
-.loremHome {
+.home-main-par {
 width: auto; /* needs to be auto instead of 100% - with 100% it overflows*/  
 height: 100%;
 margin: 5px;
@@ -1997,7 +1997,7 @@ display: block;
 }
 
 
-.img-Gato {
+.home-main-img {
 display: inline-block;
 height: auto;
 width: 30%;
