--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <%= yield %>
 
 
-
-
+  <%= javascript_include_tag 'application'%>
+  <%= javascript_include_tag 'script-main'%> 
 </body>
 </html>
