--- a/app/views/layouts/tabs/_homeTab.html.erb
+++ b/app/views/layouts/tabs/_homeTab.html.erb
@@ -2,9 +2,9 @@
 
     <h1 class="homeTabTitle">Lorem Ipsum</h1>
     
-    <img class="img-Gato" src="/assets/home/gato.png">
+    <img class="home-main-img" src="/assets/home/gato.png">
     <div class="homeBody">
-      <p class="loremHome">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu nulla vitae metus rhoncus ultricies quis nec felis. Duis -lectus turpis, auctor sed enim ac, blandit mollis justo. Nam quis nisi dapibus, vulputate lacus eleifend, maximus magna.
+      <p class="home-main-par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu nulla vitae metus rhoncus ultricies quis nec felis. Duis -lectus turpis, auctor sed enim ac, blandit mollis justo. Nam quis nisi dapibus, vulputate lacus eleifend, maximus magna.
         Quisque et ullamcorper magna. In bibendum, elit at bibendum rutrum, erat nunc pulvinar nisl, vel elementum metus purus ac purus. Mauris gravida porta nibh non consectetur. Suspendisse ullamcorper enim eros, at fringilla nibh iaculis a. Nunc accumsan
         ex magna, id eleifend purus volutpat vel. Integer quam orci, tempus sit amet massa at, dictum pulvinar est. Nam volutpat massa eu auctor rutrum. Nunc vehicula et felis sit amet egestas. Cum sociis natoque penatibus et magnis dis parturient montes,
         nascetur ridiculus mus. Suspendisse tristique eu sem sit amet rutrum. Sed id eleifend augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus sit amet velit interdum tellus pellentesque efficitur.
@@ -24,10 +24,10 @@
     
   <div class="bigThumbnails" id="bigThumbnails">
      <div class="bigThumbnailsContainer">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto1" src="https://static.wixstatic.com/media/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_1c0ae4a1f489479095b0254386cfb30a.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto2" src="https://static.wixstatic.com/media/be0972_8c14305aff204a55a768e4b825c7b708.jpg/v1/fill/w_1172,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_8c14305aff204a55a768e4b825c7b708.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto3" src="https://static.wixstatic.com/media/be0972_4fff92aa64c24927bd083fbe071fab06.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_4fff92aa64c24927bd083fbe071fab06.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto4" src="https://static.wixstatic.com/media/be0972_e154b9251a7949a5858380193324fcb2.jpg/v1/fill/w_1208,h_806,al_c,q_90,usm_0.66_1.00_0.01/be0972_e154b9251a7949a5858380193324fcb2.jpg">
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto1" src="/assets/home/people.jpg">
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto2" src="/assets/home/models.jpg">
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto3" src="/assets/home/urban.jpg">
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto4" src="/assets/home/events.jpg">
     </div> 
   </div>
     
