fixes small error with error messages on new password reset page

--- a/app/views/admin/password_resets/new.html.erb
+++ b/app/views/admin/password_resets/new.html.erb
@@ -10,7 +10,9 @@
 <div class="password-reset-container">
 <div class="action-title">Reset your password</div>
 
-<%= render 'admin/flash_messages' %>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
 
 <%= form_for(:admin_password_reset, url: admin_password_resets_path) do |f| %>
 	<%= f.label 'Please enter your email address' %>
