--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, @user.name) %>
-<%= javascript_include_tag 'application'%> 
+
+<%= javascript_include_tag 'jquery'%> 
+<%= javascript_include_tag 'jquery_ujs' %>
 <%= stylesheet_link_tag 'admin', media: 'all' %>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= csrf_meta_tag %>
