Adds S3 bucket call in slide tabs for number of imgs

--- a/app/views/layouts/tabs/_homeTab.html.erb
+++ b/app/views/layouts/tabs/_homeTab.html.erb
@@ -2,7 +2,7 @@
 
     <h1 class="homeTabTitle">Lorem Ipsum</h1>
     
-    <img class="home-main-img" src="/assets/home/gato.png">
+    <img class="home-main-img" src=<%= asset_path "images/home/gato.png" %> >
     <div class="homeBody">
       <p class="home-main-par">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu nulla vitae metus rhoncus ultricies quis nec felis. Duis -lectus turpis, auctor sed enim ac, blandit mollis justo. Nam quis nisi dapibus, vulputate lacus eleifend, maximus magna.
         Quisque et ullamcorper magna. In bibendum, elit at bibendum rutrum, erat nunc pulvinar nisl, vel elementum metus purus ac purus. Mauris gravida porta nibh non consectetur. Suspendisse ullamcorper enim eros, at fringilla nibh iaculis a. Nunc accumsan
@@ -24,10 +24,10 @@
     
   <div class="bigThumbnails" id="bigThumbnails">
      <div class="bigThumbnailsContainer">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto1" src="/assets/home/people.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto2" src="/assets/home/models.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto3" src="/assets/home/urban.jpg">
-      <img class="bigThumbnailImgs" id="bigThumbnailPhoto4" src="/assets/home/events.jpg">
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto1" src=<%= asset_path "/images/home/people.jpg" %> >
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto2" src=<%= asset_path "/images/home/models.jpg" %> >
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto3" src=<%= asset_path "/images/home/urban.jpg" %> >
+      <img class="bigThumbnailImgs" id="bigThumbnailPhoto4" src=<%= asset_path "/images/home/events.jpg" %> >
     </div> 
   </div>
     
