--- a/app/views/layouts/_slidersContent.html.erb
+++ b/app/views/layouts/_slidersContent.html.erb
@@ -1,6 +1,9 @@
-<% assets_dir = 'app/assets/images/' #base directory of all assets
+<% 
+assets_dir = 'images/' #base directory of all assets
+#used to be 'app/assets/images/' 
    active_slide_class = 'active-slide' #HTML class to be used for the active slide - This is used by the javascript and css to display and style things.
    full_dir = "#{assets_dir}" + "#{@image_dir}" #image_dir is provided by the respective partial
+ #  full_dir = asset_path full_dir
   # active_slide = 1 # 1-indexed number of the active slide. Later it will be dynamic
 
   if params[:id].nil?
@@ -11,20 +14,35 @@
   end
 
   
-slides_number = Dir[File.join(full_dir, '**', '*')].count { |file| File.file?(file) } #Counts the amount of files in the directory determined by the active tab
+#slides_number = Dir[File.join(full_dir, '**', '*')].count { |file| File.file?(file) } #Counts the amount of files in the directory determined by the active tab
 #the loop below loops creates slides_number amount of divs that contain an image element, whose source is full_dir/<NUMBER OF SLIDE>.jpg. Additionally, for the active slide, it adds the active_slide_class value
+
+#s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: 'images/peopleSlides').contents.map(&:key).slice(1..-1).count
+s3 = Aws::S3::Client.new
+
+
+
+#does a request to our s3 bucket using the AWS-SDK. Prefix is the "directory", contents is the part of the full response that lists the files inside
+#our bucket that match our constraints. In this case, the "prefix" helps us get only the "directory" we want within the bucket.
+#contents.map(&:key) presents only the key (so its like the root + included files). the slice method is added to exclude the 0 index, which is the "root" of the directory
+
+slides_number = s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: full_dir).contents.map(&:key).slice(1..-1).count
+
 %>
+
+
+<% #contar numero de archivos en el bucket con el sdk de S3 %>
 
 <% (1...slides_number+1).each do |slide| %> 
 
 <% if slide == active_slide %>
 
     <%= content_tag :div, class: "#{@tab_value} #{active_slide_class}" do -%>
-      <%= image_tag("/assets/#{@image_dir}/#{active_slide}.jpg") -%>
+      <%= image_tag("#{@image_dir}/#{active_slide}.jpg") -%>
     <% end -%>
 <% else %>
 <%= content_tag :div, class: "#{@tab_value}" do -%>
-  <%= image_tag("/assets/#{@image_dir}/#{slide}.jpg") -%>
+  <%= image_tag("#{@image_dir}/#{slide}.jpg") -%>
   <% end -%>
 <% end %>
 
