--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -7,7 +7,7 @@
  <div class="aboutButton" id="aboutButton"><span class="contactButtonText">About Me</span></div>
     <div class="contactText" id="contactText">
 
-        <div class="leoPhoto"><img id="leoPic" src="/assets/contact/leoPhoto.jpg"></div>
+        <div class="leoPhoto"><img id="leoPic" src=<%= asset_path 'images/contact/leoPhoto.jpg' %> ></div>
       <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
       <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
         I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
